Add tests to AnswerService and NotificationController (Rafaela) lauraye27/miw-frontend-foro#23